ajax-loader added (but needs to be fixed).

--- a/Migration/Eisk.Web/Views/Shared/_Layout.cshtml
+++ b/Migration/Eisk.Web/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
         </div>
     </div>
     <div class="container body-content">
+        <img id="loading-image" src="@Url.Content("~/Images/loader-life.gif")" style="display: none" />
         @Html.RenderMessages()
         @RenderBody()
         <hr />
