custom route updated.

--- a/Migration/Eisk.Web/Views/Shared/_Layout.cshtml
+++ b/Migration/Eisk.Web/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                     <a href="@Url.Content("~/Employees/")">Employees</a>
                 </li>
                 <li>
-                    <a href="@Url.Content("~/SecurityDemo/")">Security Samples</a>
+                    <a href="@Url.Content("~/Account/")">Security Samples</a>
                 </li>
             </ul>
             @Html.Partial("_LoginPartial")
