--- a/Migration/Eisk.Web/Views/Employees/Edit.cshtml
+++ b/Migration/Eisk.Web/Views/Employees/Edit.cshtml
@@ -19,7 +19,21 @@
     </script>*@
 <style type="text/css">
     .bs-example {
-        margin: 20px 60px;
+        margin: 20px 80px;
+        border-color: red;
+        border-width: 10px;
+        /*border-style: solid;*/
+    }
+
+    .border-sample {
+        border-color: red;
+        border-width: 10px;
+        border-style: solid;
+    }
+
+    .form-group2 {
+        padding-right: 20px;
+        position: relative;
     }
 </style>
 
@@ -30,7 +44,7 @@
 }
 
 @using (Html.BeginForm(Model.EditorAction, "Employees", FormMethod.Post,
-                                        new { enctype = "multipart/form-data", @class = "form-horizontal" }))
+                                                                                        new { enctype = "multipart/form-data", @class = "form-horizontal" }))
 {
     @Html.ValidationSummary(true)
     <h1 class="h1">
@@ -42,7 +56,8 @@
     </p>
     @Html.HiddenFor(model => model.Id)
     <div class="bs-example">
-        <div class="row form-group">
+
+        <div class="row form-group form-group2">
             <div class="col-xs-4">
                 @Html.LabelFor(m => m.FirstName)
                 @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
@@ -52,12 +67,12 @@
                 @Html.LabelFor(m => m.LastName)
                 <div class="input-group">
                     <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
-                    @Html.TextBoxFor(m => m.LastName, new {@class = "form-control"})
+                    @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
                 </div>
                 @Html.ValidationMessageFor(m => m.LastName)
             </div>
         </div>
-        <br>
+
         <div class="row">
             <div class="col-xs-4">
                 <div class="input-group">
