--- a/Migration/Eisk.Web/Views/Employees/Edit.cshtml
+++ b/Migration/Eisk.Web/Views/Employees/Edit.cshtml
@@ -57,19 +57,35 @@
     @Html.HiddenFor(model => model.Id)
     <div class="bs-example">
 
-        <div class="row form-group form-group2">
-            <div class="col-xs-4">
+        <div class="row form-group">
+            <div class="col-xs-3">
                 @Html.LabelFor(m => m.FirstName)
                 @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
                 @Html.ValidationMessageFor(m => m.FirstName)
             </div>
-            <div class="col-xs-4">
+            <div class="col-xs-3">
                 @Html.LabelFor(m => m.LastName)
                 <div class="input-group">
                     <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
                     @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
                 </div>
                 @Html.ValidationMessageFor(m => m.LastName)
+            </div>
+        </div>
+
+        <div class="row form-group">
+            <div class="col-xs-3">
+                @Html.LabelFor(m => m.LastName)
+                <div class="input-group">
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
+                    @Html.TextBoxFor(m => m.LastName, new {@class = "form-control"})
+                </div>
+                @Html.ValidationMessageFor(m => m.LastName)
+            </div>
+            <div class="col-xs-3">
+                @Html.LabelFor(m => m.FirstName)
+                @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.FirstName)
             </div>
         </div>
 
