--- a/Migration/Eisk.Web/Views/Employees/Edit.cshtml
+++ b/Migration/Eisk.Web/Views/Employees/Edit.cshtml
@@ -44,17 +44,10 @@
     <div class="bs-example">
         <div class="row form-group">
             <div class="col-xs-4">
-                @Html.LabelFor(m => m.FirstName)
                 @Html.EditorFor(m => m.FirstName)
-                @Html.ValidationMessageFor(m => m.FirstName)
             </div>
             <div class="col-xs-4">
-                @Html.LabelFor(m => m.LastName)
-                <div class="input-group">
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
-                    @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
-                </div>
-                @Html.ValidationMessageFor(m => m.LastName)
+                @Html.EditorFor(m => m.LastName)
             </div>
         </div>
         <br>
