added support for required symbol.

--- a/Migration/Eisk.Web/Views/Shared/EditorTemplates/String.cshtml
+++ b/Migration/Eisk.Web/Views/Shared/EditorTemplates/String.cshtml
@@ -1,6 +1,7 @@
 ﻿@model string
 
 @Html.Label("")
+@Html.RequiredSymbol()
 @Html.TextBox("", (Model), new { @class = "form-control" })
 @Html.ValidationMessage("")
 
