--- a/Migration/Eisk.Web/Views/Employees/Edit.cshtml
+++ b/Migration/Eisk.Web/Views/Employees/Edit.cshtml
@@ -19,7 +19,7 @@
     </script>*@
 <style type="text/css">
     .bs-example {
-        margin: 20px 60px;
+        margin: 20px 30px;
     }
 </style>
 
@@ -30,15 +30,14 @@
 }
 
 @using (Html.BeginForm(Model.EditorAction, "Employees", FormMethod.Post,
-                                                                                                    new { enctype = "multipart/form-data", @class = "form-horizontal" }))
+                                                                                                                                        new { enctype = "multipart/form-data", @class = "form-horizontal" }))
 {
     @Html.ValidationSummary(true)
     <h1 class="h1">
-        @*@Model.PageTitle*@
-        Test
+        @Model.PageTitle
     </h1>
     <p class="bs-example">
-        Add details of the employee.
+        Add details of the employee. Required fields are marked with *.
     </p>
     @Html.HiddenFor(model => model.Id)
     <div class="bs-example">
@@ -95,17 +94,22 @@
                 @Html.EditorFor(m => m.Extension)
             </div>
         </div>
-        <br>
-        <div class="row">
+        <div class="row form-group">
             <div class="col-xs-4">
-                <div class="input-group">
-                    <input type="submit" class="btn btn-primary" value="Submit">
-                    @*<input type="reset" class="btn btn-default" value="Reset">*@
-                    <br />
-                    <div>
-                        <em>Required fields are marked with *</em>
-                    </div>
-                </div>
+                @Html.EditorFor(m => m.Notes)
+            </div>
+            <div class="col-xs-4">
+                @Html.Partial("_EditorImagePanel", Model)
+            </div>
+        </div>
+        <div class="row form-group">
+            <div class="col-xs-4">
+                <input type="submit" class="btn btn-primary" value="Submit">
+            </div>
+        </div>
+        <div class="row form-group">
+            <div class="col-xs-4">
+                    <span>Required fields are marked with *</span>
             </div>
         </div>
     </div>
