jquery ui upgraded with calender control.

--- a/Migration/Eisk.Web/Views/Shared/EditorTemplates/DateTime.cshtml
+++ b/Migration/Eisk.Web/Views/Shared/EditorTemplates/DateTime.cshtml
@@ -2,6 +2,6 @@
 
 @Html.Label("")
 @Html.RequiredSymbol()
-@Html.TextBox("", (Model), new { @class = "form-control" })
+@Html.TextBox("", (Model), new { @class = "form-control datepicker" })
 @Html.ValidationMessage("")
 
