--- a/Migration/Eisk.Web/Views/Employees/Edit.cshtml
+++ b/Migration/Eisk.Web/Views/Employees/Edit.cshtml
@@ -1,23 +1,4 @@
-﻿@*<script src="@Url.Content("~/Scripts/eisk-required-if-validation.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery-ui-1.8.18.custom.min.js")" type="text/javascript"></script>
-    <script type="text/javascript">
-        $(function () {
-            $(".datepicker").datepicker({
-                changeMonth: true,
-                changeYear: true,
-                showOn: "focus",
-                showAnim: 'slideDown'
-            });
-        });
-    </script>
-    <script type="text/javascript">
-
-        $("#anim").change(function () {
-            $("#datepicker").datepicker("option", "showAnim", $(this).val());
-        });
-
-    </script>*@
-<style type="text/css">
+﻿<style type="text/css">
     .bs-example {
         margin: 20px 30px;
     }
@@ -30,7 +11,7 @@
 }
 
 @using (Html.BeginForm(Model.EditorAction, "Employees", FormMethod.Post,
-                                                                                                                                        new { enctype = "multipart/form-data", @class = "form-horizontal" }))
+                                                                                                                                                                new { enctype = "multipart/form-data", @class = "form-horizontal" }))
 {
     @Html.ValidationSummary(true)
     <h1 class="h1">
@@ -109,12 +90,35 @@
         </div>
         <div class="row form-group">
             <div class="col-xs-4">
-                    <span>Required fields are marked with *</span>
+                <span>Required fields are marked with *</span>
             </div>
         </div>
     </div>
 }
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jquery-val");
+    @Scripts.Render("~/bundles/jquery-ui");
+
+    <script type="text/javascript">
+        $(function () {
+            $(".datepicker").datepicker({
+                changeMonth: true,
+                changeYear: true,
+                showOn: "focus",
+                showAnim: 'slideDown'
+            });
+        });
+    </script>
+    <script type="text/javascript">
+
+        $("#anim").change(function () {
+            $("#datepicker").datepicker("option", "showAnim", $(this).val());
+        });
+
+    </script>
+}
+
+@section Styles {
+    @Styles.Render("~/Content/css/jquery-ui")
 }
