updated with nameof operator.

--- a/Migration/Eisk.Web/Views/Employees/Edit.cshtml
+++ b/Migration/Eisk.Web/Views/Employees/Edit.cshtml
@@ -45,6 +45,9 @@
             <div class="col-xs-4">
                 @Html.EditorFor(m => m.ReportsTo)
             </div>
+            <div class="col-xs-4">
+                @Html.EditorFor(m => m.Address.Country)
+            </div>
         </div>
         <div class="row form-group">
             <div class="col-xs-4">
