--- a/Migration/Eisk.Web/Views/Shared/_Layout.cshtml
+++ b/Migration/Eisk.Web/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="@Url.Content("~/Images/favicon.ico")" />
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @RenderSection("Styles", false)
@@ -35,14 +36,15 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
-        @Html.RenderMessages()
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+<div class="container body-content">
+    
+    @Html.RenderMessages()
+    @RenderBody()
+    <hr/>
+    <footer>
+        <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+    </footer>
+</div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
