lookup model updated.

--- a/Migration/Eisk.Web/Views/Employees/Edit.cshtml
+++ b/Migration/Eisk.Web/Views/Employees/Edit.cshtml
@@ -5,8 +5,7 @@
     ViewBag.Title = Model.PageTitle;
 }
 
-@using (Html.BeginForm(Model.EditorAction, "Employees", FormMethod.Post,
-                                                                                                                                                                            new { enctype = "multipart/form-data", @class = "form-horizontal" }))
+@using (Html.BeginForm(Model.EditorAction, "Employees", FormMethod.Post, new { enctype = "multipart/form-data", @class = "form-horizontal" }))
 {
     @Html.ValidationSummary(true)
     <h1 class="h1">
