--- a/Migration/Eisk.Web/Views/Shared/EditorTemplates/DateTime.cshtml
+++ b/Migration/Eisk.Web/Views/Shared/EditorTemplates/DateTime.cshtml
@@ -1,4 +1,4 @@
-﻿@model DateTime
+﻿@model DateTime?
 
 @{
     var value = Model == DateTime.MinValue ? string.Empty : string.Format("{0:M/dd/yyyy}", Model); 
