--- a/Migration/Eisk.Web/Content/themes/default/mvc-default.css
+++ b/Migration/Eisk.Web/Content/themes/default/mvc-default.css
@@ -4,3 +4,14 @@
     display: block;
 }
 
+.field-validation-valid
+{
+    display: none;
+}
+
+.input-validation-error
+{
+    border: 1px solid #ff0000;
+    background-color: #ffeeee;
+}
+
