--- a/Migration/Eisk.Web/Views/Shared/EditorTemplates/String.cshtml
+++ b/Migration/Eisk.Web/Views/Shared/EditorTemplates/String.cshtml
@@ -1,7 +1,8 @@
 ﻿@model string
 
-@Html.Label("")
-@Html.RequiredSymbol()
-@Html.TextBox("", (Model), new { @class = "form-control" })
-@Html.ValidationMessage("")
-
+<div class="col-xs-4">
+    @Html.Label("")
+    @Html.RequiredSymbol()
+    @Html.TextBox("", (Model), new { @class = "form-control" })
+    @Html.ValidationMessage("")
+</div>
