--- a/Migration/Eisk.Web/Views/Shared/EditorTemplates/Int32.cshtml
+++ b/Migration/Eisk.Web/Views/Shared/EditorTemplates/Int32.cshtml
@@ -1,7 +1,9 @@
 ﻿@model Int32
 
-@Html.Label("")
-@Html.RequiredSymbol()
-@Html.TextBox("", (Model), new { @class = "form-control" })
-@Html.ValidationMessage("")
+<div class="col-xs-4">
+    @Html.Label("")
+    @Html.RequiredSymbol()
+    @Html.TextBox("", (Model), new { @class = "form-control" })
+    @Html.ValidationMessage("")
 
+</div>
